# bee

./: CMakeLists.txt  README.md  bee.c  bee_cli.c  bee_http.c  bee_telnet.c
examples/: CMakeLists.txt  bee_httpd.c  bee_telnetd.c  httpd.c  mcast_receive.c  tcp_echo.c  telnetd.c  udp_echo.c
external_libs/: CMakeLists.txt  README.md
includes/: bee.h  bee_cli.h  bee_http.h  bee_telnet.h  list.h
